--- a/Dockerfile.amd64
+++ b/Dockerfile.amd64
@@ -1,6 +1,6 @@
 FROM python:alpine
 
-ENV DSMR_READER_VERSION v2.2.0
+ENV DSMR_READER_VERSION v2.6.0
 
 ENV DSMR_USER admin
 ENV DSMR_EMAIL root@localhost
@@ -41,7 +41,9 @@ RUN mkdir -p /run/nginx/ && \
 COPY ./app/run.sh /run.sh
 RUN chmod u+x /run.sh
 
-COPY ./app/supervisord.ini /etc/supervisor.d/supervisord.ini
+COPY ./app/supervisord.ini.* /etc/supervisor.d/
+
+COPY ./app/dsmr_datalogger_api_client.py /dsmr/dsmr_datalogger/scripts/dsmr_datalogger_api_client.py
 
 EXPOSE 80 443
 
