--- a/Dockerfile.arm64v8
+++ b/Dockerfile.arm64v8
@@ -4,7 +4,7 @@ FROM arm64v8/python:alpine
 ENV QEMU_EXECVE 1
 COPY qemu/qemu-aarch64-static /usr/bin
 
-ENV DSMR_READER_VERSION v2.2.0
+ENV DSMR_READER_VERSION v2.6.0
 
 ENV DSMR_USER admin
 ENV DSMR_EMAIL root@localhost
@@ -50,7 +50,9 @@ COPY ./app/run.sh /run.sh
 RUN ["/usr/bin/qemu-aarch64-static", "/bin/sh", "-c", \
      "chmod u+x /run.sh"]
 
-COPY ./app/supervisord.ini /etc/supervisor.d/supervisord.ini
+COPY ./app/supervisord.ini.* /etc/supervisor.d/
+
+COPY ./app/dsmr_datalogger_api_client.py /dsmr/dsmr_datalogger/scripts/dsmr_datalogger_api_client.py
 
 EXPOSE 80 443
 
