--- a/Dockerfile.arm64v8
+++ b/Dockerfile.arm64v8
@@ -4,7 +4,7 @@ FROM arm64v8/python:alpine
 ENV QEMU_EXECVE 1
 COPY qemu/qemu-aarch64-static /usr/bin
 
-ENV DSMR_READER_VERSION v3.3.0
+ENV DSMR_READER_VERSION v4.1.1
 
 ENV DSMR_USER admin
 ENV DSMR_EMAIL root@localhost
@@ -15,12 +15,15 @@ ENV DB_USER dsmrreader
 ENV DB_PASS dsmrreader
 ENV DB_NAME dsmrreader
 
+COPY ./app/run.sh /run.sh
+
 RUN ["/usr/bin/qemu-aarch64-static", "/bin/sh", "-c", \
      "apk --update add --no-cache \
       bash \
       curl \
       nginx \
       postgresql-client \
+      mariadb-dev \
       supervisor"]
 
 RUN ["/usr/bin/qemu-aarch64-static", "/bin/sh", "-c", \
@@ -28,31 +31,24 @@ RUN ["/usr/bin/qemu-aarch64-static", "/bin/sh", "-c", \
       tar -xzf /tmp/dsmr.tar.gz -C / && \
       mv /dsmr-reader* /dsmr && \
       rm -f /tmp/dsmr.tar.gz && \
-      cp /dsmr/dsmrreader/provisioning/django/postgresql.py /dsmr/dsmrreader/settings.py"]
-
-RUN ["/usr/bin/qemu-aarch64-static", "/bin/sh", "-c", \
-     "apk add --virtual .build-deps gcc musl-dev postgresql-dev && \
-      pip3 install six --no-cache && \
+      apk add --virtual .build-deps gcc musl-dev postgresql-dev && \
+      pip3 install six psycopg2-binary --no-cache && \
       pip3 install -r /dsmr/dsmrreader/provisioning/requirements/base.txt --no-cache-dir && \
-      pip3 install -r /dsmr/dsmrreader/provisioning/requirements/postgresql.txt --no-cache-dir && \
+      pip3 install -r /dsmr/dsmrreader/provisioning/requirements/mysql.txt --no-cache-dir && \
       apk --purge del .build-deps && \
-      rm -rf /tmp/*"]
-
-RUN ["/usr/bin/qemu-aarch64-static", "/bin/sh", "-c", \
-     "mkdir -p /run/nginx/ && \
+      rm -rf /tmp/* && \
+      mkdir -p /run/nginx/ && \
       ln -sf /dev/stdout /var/log/nginx/access.log && \
       ln -sf /dev/stderr /var/log/nginx/error.log && \
       rm -f /etc/nginx/conf.d/default.conf && \
       mkdir -p /var/www/dsmrreader/static && \
-      cp /dsmr/dsmrreader/provisioning/nginx/dsmr-webinterface /etc/nginx/conf.d/dsmr-webinterface.conf"]
+      cp /dsmr/dsmrreader/provisioning/nginx/dsmr-webinterface /etc/nginx/conf.d/dsmr-webinterface.conf && \
+      cp /dsmr/dsmrreader/provisioning/django/settings.py.template /dsmr/dsmrreader/settings.py && \
+      cp /dsmr/.env.template /dsmr/.env && \
+      /dsmr/tools/generate-secret-key.sh && \
+      chmod u+x /run.sh"]
 
-COPY ./app/run.sh /run.sh
-RUN ["/usr/bin/qemu-aarch64-static", "/bin/sh", "-c", \
-     "chmod u+x /run.sh"]
-
-COPY ./app/supervisord.ini.* /etc/supervisor.d/
-
-COPY ./app/dsmr_datalogger_api_client.py /dsmr/dsmr_datalogger/scripts/dsmr_datalogger_api_client.py
+COPY ./app/supervisord.ini /etc/supervisor.d/
 
 EXPOSE 80 443
 
