--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,8 +5,8 @@ services:
     image: postgres
     container_name: dsmrdb
     volumes:
-      - ./dsmrdb:/var/lib/postgresql/data
-      - ./dsmrdb_backups:/home/dsmr/app/backups
+      - dsmrdb:/var/lib/postgresql/data
+      - dsmrdb_backups:/home/dsmr/app/backups
     restart: always
     environment:
       - POSTGRES_USER=dsmrreader
@@ -19,8 +19,6 @@ services:
     build: .
     image: ualex73/dsmr-reader-docker
     container_name: dsmr
-    links:
-      - dsmrdb
     restart: always
     environment:
       - DB_HOST=dsmrdb
