--- a/app/supervisord.ini
+++ b/app/supervisord.ini
@@ -40,7 +40,19 @@ stopwaitsecs=30
 [program:dsmr_webinterface]
 command=/bin/nice -n 15 gunicorn dsmrreader.wsgi --timeout 60 --max-requests 500 --bind unix:/var/tmp/gunicorn--%(program_name)s.socket --pid /var/tmp/gunicorn--%(program_name)s.pid
 directory=/dsmr/
+autostart=true
 startsecs=3
 
 [program:nginx]
 command=/usr/sbin/nginx -g 'daemon off;'
+autostart=true
+
+[program:dsmr_client_datalogger]
+command=/bin/nice -n 5 python3 -u /dsmr/dsmr_datalogger/scripts/dsmr_datalogger_api_client.py
+pidfile=/var/tmp/dsmrreader--%(program_name)s.pid
+autostart=false
+autorestart=false
+startsecs=1
+startretries=100
+stopwaitsecs=20
+
