Fixes for v5.0.0-dev

--- a/app/supervisord.ini
+++ b/app/supervisord.ini
@@ -21,7 +21,7 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 
 [program:dsmr_datalogger]
 command=/bin/nice -n 5 python3 -u /dsmr/manage.py dsmr_datalogger
-pidfile=/var/tmp/dsmrreader--%(program_name)s.pid
+pidfile=/tmp/dsmrreader--%(program_name)s.pid
 autostart=true
 autorestart=true
 startsecs=1
@@ -30,7 +30,7 @@ stopwaitsecs=20
 
 [program:dsmr_backend]
 command=/bin/nice -n 10 python3 -u /dsmr/manage.py dsmr_backend
-pidfile=/var/tmp/dsmrreader--%(program_name)s.pid
+pidfile=/tmp/dsmrreader--%(program_name)s.pid
 autostart=true
 autorestart=true
 startsecs=1
@@ -38,7 +38,7 @@ startretries=100
 stopwaitsecs=30
 
 [program:dsmr_webinterface]
-command=/bin/nice -n 15 gunicorn dsmrreader.wsgi --timeout 60 --max-requests 500 --bind unix:/var/tmp/gunicorn--%(program_name)s.socket --pid /var/tmp/gunicorn--%(program_name)s.pid
+command=/bin/nice -n 15 gunicorn dsmrreader.wsgi --timeout 60 --max-requests 500 --bind unix:/tmp/gunicorn--%(program_name)s.socket --pid /tmp/gunicorn--%(program_name)s.pid
 directory=/dsmr/
 autostart=true
 startsecs=3
@@ -49,7 +49,7 @@ autostart=true
 
 [program:dsmr_client_datalogger]
 command=/bin/nice -n 5 python3 -u /dsmr/dsmr_datalogger/scripts/dsmr_datalogger_api_client.py
-pidfile=/var/tmp/dsmrreader--%(program_name)s.pid
+pidfile=/tmp/dsmrreader--%(program_name)s.pid
 autostart=false
 autorestart=false
 startsecs=1
